# typespec/tsp-output/schema/openapi.admin.json
@@ -12,6 +12,9 @@
       "name": "ApprovalRequests"
     },
     {
+      "name": "Players"
+    },
+    {
       "name": "Health"
     }
   ],
@@ -477,6 +480,81 @@
           "Health"
         ]
       }
+    },
+    "/players": {
+      "get": {
+        "operationId": "Players_list",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ReadPlayerItem"
+                  }
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SampleGame.Error"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Players"
+        ]
+      }
+    },
+    "/players/{id}": {
+      "get": {
+        "operationId": "Players_read",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadPlayer"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SampleGame.Error"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Players"
+        ]
+      }
     }
   },
   "components": {
@@ -648,6 +726,50 @@
           "updatedAt": {
             "type": "string",
             "format": "date-time"
+          }
+        },
+        "description": ""
+      },
+      "ReadPlayer": {
+        "type": "object",
+        "required": [
+          "id",
+          "name",
+          "level"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "level": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "description": ""
+      },
+      "ReadPlayerItem": {
+        "type": "object",
+        "required": [
+          "id",
+          "name",
+          "level"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "level": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "description": ""
